fix: manage the CountryList display on mobile devices

--- a/src/components/Country/Country.css
+++ b/src/components/Country/Country.css
@@ -5,10 +5,6 @@
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.country__flag{
-  width: inherit;
-  height: 200px;
-}
 .country__flag .flag{
   display: inline-block;
   width: 100%;
