--- a/src/components/CountryList/CountryList.css
+++ b/src/components/CountryList/CountryList.css
@@ -2,4 +2,14 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
+  padding: 40px 0;
+}
+
+
+@media screen and (max-width: 768px){
+  .countries {
+    display: grid;
+    grid-template-columns: 100%;
+  }
+  
 }
